2011-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-next-page): When the last line of the
	article is displayed, scroll down once more instead of going to the
	next article at once.

	* shr.el: Revert change that made headings use different-sized faces.
	The Emacs display engine isn't advanced enough that, for instance,
	tables can comfortably use differntly-sized faces.

2011-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection-1): Store the actual stream type
	used.
	(nnimap-login): Prefer plain LOGIN if it's enabled (since it requires
	fewer round trips than CRAM-MD5, and it's less likely to be buggy), and
	we're using an encrypted connection.

	* proto-stream.el: Alter the interface functions to also return the
	actual stream type used: network or tls.

2011-01-25  Julien Danjou  <julien@danjou.info>

	* mm-view.el (mm-display-shell-script-inline): Fix typo in docstring.
	(mm-display-javascript-inline): New function.

	* mm-decode.el (mm-inline-media-tests): Add application/javascript
	viewing function.

2011-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-expand-newlines): Fix variable name.

2011-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-newlines): Make nested boxes work.

2011-01-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-newlines): Proof of concept implemantation of boxy
	backgrounds.
	(shr-expand-newlines): Switch to using overlays to enable kill'n'yank
	in a more sensible manner.

2011-01-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* mml-smime.el (mml-smime-use): Make it a defcustom and default to 'epg
	if EPG is loaded.

2011-01-24  Julien Danjou  <julien@danjou.info>

	* shr.el: Use defface to create shr-tag-h[1-6] faces to fontify h[1-6]
	tags.

2011-01-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-read-summary-keys): Don't call disabled
	commands.

	* gnus-gravatar.el (gnus-gravatar-insert): Don't move point around